--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Your Name
-description: Technical Writer | Portfolio
+title: Vidwan Reddy
+description: Technical Writer
